--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
   "main": "src/main.js",
   "scripts": {
     "test": "jest  --config jest.config.js --coverage",
+    "lint": "./node_modules/.bin/eslint src/",
+    "lintfix": "./node_modules/.bin/eslint src/ --fix",
     "serve": "npx serve"
   },
   "repository": {
@@ -18,6 +20,7 @@
   },
   "homepage": "https://github.com/shailpatels/VisualLogic-Web#readme",
   "devDependencies": {
+    "eslint": "^7.13.0",
     "esm": "^3.2.25",
     "jest": "^26.1.0",
     "jest-esm-transformer": "^1.0.0",
