--- a/package.json
+++ b/package.json
@@ -6,8 +6,7 @@
   "scripts": {
     "test": "jest  --config jest.config.js --coverage",
     "lint": "./node_modules/.bin/eslint src/",
-    "lintfix": "./node_modules/.bin/eslint src/ --fix",
-    "serve": "npx serve"
+    "lint:fix": "./node_modules/.bin/eslint src/ --fix"
   },
   "repository": {
     "type": "git",
@@ -20,10 +19,10 @@
   },
   "homepage": "https://github.com/shailpatels/VisualLogic-Web#readme",
   "devDependencies": {
-    "eslint": "^7.13.0",
+    "eslint": "^8.2.0",
     "esm": "^3.2.25",
-    "jest": "^26.1.0",
+    "jest": "^27.3.1",
     "jest-esm-transformer": "^1.0.0",
-    "serve": "^11.3.2"
+    "serve": "^13.0.2"
   }
 }
