--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -24,6 +24,27 @@
         "semi": [
             "error",
             "always"
-        ]
+        ],
+        "template-curly-spacing": ["error", "never"],
+        "semi-style": ["error", "last"],
+        "semi": ["error", "always"],
+        "quotes": ["error", "single", 
+            {"avoidEscape": true}
+        ],
+        "prefer-template": ["error"],
+        "prefer-const": ["error"],
+        "prefer-arrow-callback": ["error"],
+        "no-var": ["error"],
+        "no-trailing-spaces": ["error"],
+        "keyword-spacing": [
+            "error", 
+            {"before": true, "after": true}
+        ],
+        "brace-style": [
+            "error", 
+            "1tbs", 
+            { "allowSingleLine": true }
+        ],
+        "block-spacing": "error"
     }
 }
