--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   },
   "homepage": "https://github.com/shailpatels/VisualLogic-Web#readme",
   "devDependencies": {
+    "@babel/plugin-transform-modules-commonjs": "^7.17.7",
     "eslint": "^8.2.0",
     "esm": "^3.2.25",
     "jest": "^27.3.1",
